# collect

./: .gitignore  Procfile  README.md  collect.sublime-workspace  collection.sublime-workspace  requirements.txt
_archive/: collection.csv  models.py
_archive/images/: A Fat Wreck (2016) [1080p] [BluRay] [5.1] [YTS.MX].torrent
_archive/templates/books/: admin.html  index.html
_archive/templates/reg/: login.html
_plugins/infinite-scroll/: README.md  pyproject.toml
_plugins/infinite-scroll/core/: models.py  views.py
_plugins/infinite-scroll/core/management/commands/: load-fixtures.py
_plugins/infinite-scroll/core/migrations/: 0001_initial.py
_plugins/infinite-scroll/core/templates/core/: index.html  product-list.html
_plugins/infinite-scroll/infinitescroll/: settings.py  urls.py
books/: admin.db  ak.csv  ak.sql  bookdesk.db  db.sqlite3  router.py
books/books/: settings.py  urls.py
books/collection/: admin.py  forms.py  models.py  urls.py  utils.py  views.py  widgets.py
books/collection/migrations/: 0001_initial.py  0002_alter_booklist_options.py  0002_tags.py  0003_booklist2.py  0003_booklistupdate.py  0004_bookadmin_delete_booklist2_alter_booklist_table.py  (+23 more)
books/profiles/: admin.py  forms.py  models.py  urls.py  views.py
books/templates/: home.html  nav_desktop.html
lite/: phpliteadmin.config.php
people/: admin.py  forms.py  models.py  urls.py  views.py
static/css/: forms.css  grids.css  styles.css
templates/: home.html
templates/base/: index.html  modal.html  user.html
templates/books/: index.html
templates/entry/: user.html
(+36 files in other folders)
